service.yaml
apiVersion: v1
kind: Service
metadata:
  name: badges-shield-service
spec:
  selector:
    app: badges-shield
  type: NodePort
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
