Ingress.yaml
---

apiVersion: networking.k8s.io/v1 
kind: Ingress 
metadata: 
  name: badges-shield-ingress 
spec: 
  rules: 
  - host: shield.badges.io
    http: 
      paths: 
      - backend: 
          service:
            name: "badges-shield-service"
            port: 
              number: 80 
        path: "/"
        pathType: "Prefix" 
  tls: 
  - hosts: 
    - shield.badges.io 
    secretName: open-certificate-secret
